# Kalshi-crypto-agents

./: .env.example  .gitignore  CLAUDE.md  HOWTO.md  HOW_TO_USE.md  PHASES.md  README.md  STRATEGY.md  config.json  main.py  pyproject.toml
.github/workflows/: ci.yml
analytics/: __init__.py  execution_quality.py
backtesting/: backtest_runner.py  category_blocker.py  outcome_resolver.py  param_injector.py
core/: config.py  database.py  interfaces.py  models.py
dashboard/: api_server.py
dashboard/static/: app.js  index.html  styles.css
engine/: context_builder.py  ev_calculator.py  openrouter_agent.py  price_resolver.py  probability.py  setup_quality.py  signal_router.py  timing.py
execution/: order_executor.py  position_manager.py
feeds/: binance_feed.py  hyperliquid_feed.py  kalshi_feed.py
intelligence/: __init__.py  reddit_provider.py  social_sentiment.py
memory/: __init__.py  openclaw_adapter.py
scripts/: __init__.py  bot_logs.sh  cleanup_inconsistent_history.py  e2e_smoke.py  kalshi_live_trades.py  restart_bot.sh  run_e2e_loop.sh  terminal_dashboard.py  trading_loop.py
tests/: conftest.py  test_analytics.py  test_backtesting.py  test_dashboard_api.py  test_engine.py  test_execution.py  test_feeds.py  test_integration.py  test_integrations_memory_and_price.py  test_schema.py  test_social_sentiment.py
