[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "kalshi-crypto-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "aiohttp>=3.9",
    "cryptography>=42.0",
    "structlog>=24.0",
    "vectorbt>=0.26",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]
lint = [
    "ruff>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode   = "auto"
testpaths      = ["tests"]
python_files   = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts        = "-v --tb=short --strict-markers"

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "S",    # flake8-bandit (seguridad)
    "ANN",  # annotations
]
ignore = [
    "ANN101",  # self sin annotation → ruido
    "ANN102",  # cls sin annotation → ruido
    "S101",    # assert en tests está bien
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "S"]  # tests son menos estrictos en tipos y seguridad

[tool.coverage.run]
source   = ["core", "feeds", "engine", "execution", "backtesting"]
omit     = ["tests/*", "*/migrations/*"]

[tool.coverage.report]
fail_under = 85
show_missing = true
